getting files ready for gh pages test

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -643,7 +643,16 @@ input[type=number]::-webkit-outer-spin-button {
 	color:#999;
 }
 
-
+/*
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+*/
 .buttondemoBasicUsage {
 /** From vulcanized demo **/ }
   .buttondemoBasicUsage section {
